--- a/package.json
+++ b/package.json
@@ -4,9 +4,8 @@
   "description": "practice project ",
   "main": "index.js",
   "type": "module",
-  
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon src/index.js"
   },
   "author": "Rohit Kumar",
   "license": "ISC",
@@ -15,6 +14,7 @@
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "express-validator": "^7.3.0",
-    "mongoose": "^8.19.2"
+    "mongoose": "^8.19.2",
+    "nodemon": "^3.1.10"
   }
 }
